# engine

./: Cargo.toml
ecs/src/: archetype.rs  lib.rs  world.rs
ecs/src/archetype/: table.rs
game/: Cargo.toml  build.rs
game/resources/: color.fs  color.vs  light_cube.vs  pbr.fs  scene.txtpb
game/resources/cube/: sphere.mtl  sphere2.mtl
game/resources/cust/: custom.mtl  untitled.gltf
game/src/: camera.rs  main.rs  mesh.rs  model.rs  renderer.rs  scene.rs  shader.rs
game/src/model/: fbx_loader.rs  mesh.rs  obj_loader.rs
game/src/protos/: items.proto  scene.proto
game_cube/: fshader.glsl  vshader.glsl
game_cube/src/: camera.rs  main.rs  renderer.rs  shader.rs
gem/: Cargo.toml
gem-derive/: Cargo.toml
gem-derive/src/: lib.rs
gem/lib/locales/: localisation.csv
gem/src/: gem_application.rs  lib.rs  main.rs  my_game.rs
gem/src/gem_application/: game_actors.rs  options.rs  strings_cache.rs
gem/src/gem_application/game_actors/: actor.rs  actor_component.rs  actor_factory.rs  actor_prefab.rs  cube_physics_component.rs  teapot_render_component.rs
gem/src/gem_application/process_management/: process.rs  process_manager.rs
my-game/: Cargo.toml
my-game/lib/: config.toml
my-game/lib/actors/: actor1.toml  actor1.xml  actor2.xml
my-game/src/: main.rs  my_game.rs  process.rs
res-cache/: Cargo.toml
res-cache/src/: lib.rs  res_cache.rs
script-manager/: Cargo.toml
script-manager/src/: lib.rs
