[package]
name = "gem"
version = "0.1.0"
edition = "2021"

[dependencies]
gem-derive = { path = "../gem-derive" }
log = "0.4.21"
serde = {version = "1.0.203", features = ["derive"]}
simple_logger = "5.0.0"
toml = "0.8.14"
res-cache = {path = "../res-cache"}
script-manager = {path = "../script-manager"}
csv = "1.3.0"
winit = "0.30.3"
quick-xml = {version = "0.36.1", features = ["serialize"]}
minidom = "0.16.0"
flecs_ecs = "0.1.3"

